--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "package.json",
+  "name": "personalPortfolio",
+  "homepage": "http://noahgoldschmied.github.io/personalPortfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +18,6 @@
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -25,6 +25,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
